--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Strongr - Data Agency</title>
+        <title>Strongr - Smarter Business Dashboards </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
@@ -39,10 +39,6 @@
                             <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
                                 <div class="bar__module">
                                     <ul class="menu-horizontal text-left">
-                                        <li> <a href="index" target="_self">
-                                        Home</a> </li>
-                                        <li> <a href="#dashboard" class="inner-link" target="_self">Visual Dashboards</a> </li>
-                                        <li> <a href="#dashboard" class="inner-link" target="_self">The Process</a> </li>
                                         <li> <a href="#contact" class="inner-link" target="_self">
                                         Contact</a> </li>
                                     </ul>
@@ -55,7 +51,7 @@
         </div>
         <div class="main-container">
             <a id="header-element" class="in-page-link"></a>
-            <section class="cover imagebg height-50" data-overlay="5">
+            <section class="cover imagebg height-60 parallax" data-overlay="5">
                 <div class="background-image-holder"> <img alt="background" src="img/nz2.jpg"> </div>
                 <div class="container pos-vertical-center">
                     <div class="row">
@@ -74,48 +70,48 @@
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
                                 <h2>Decision Certainty</h2>
-                                <p class="lead">Make decisions with confidence. Our data solutions will enable your organisation to use cutting edge visualisations and analysis so you can determine fact from perception.<br><br>We utilise tools such as Microsoft's Power BI which provides Office level usability with the power of Excel.<br></p>
+                                <p class="lead">Powerful yet user-friendly, our dashboards are game changers in organisational decision making. <br><br><b>Integrated</b><br>We combine information from all areas of your business in one smart, easy to use package. Track performance of employees, websites, financials, surfing statistics or anything in between.<br></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <a id="" class="in-page-link" data-scroll-id="dashboard"></a>
-            <section class="feature-large switchable space--xs bg--secondary">
+            <a id="dashboards" class="in-page-link" data-scroll-id="dashboard"></a>
+            <section class="feature-large switchable bg--secondary space--xs">
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-lg-6 col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="img/dash2.png"> </div>
                         <div class="col-lg-5 col-md-6">
                             <div class="heading-block">
-                                <h2>Visual Dashboards</h2>
+                                <h2>What We Do</h2>
                             </div>
                             <div class="text-block">
-                                <h5>Easy to Understand</h5>
-                                <p>We know from experience that the user experience is the most important aspect to get right. With buy-in from the organisation, data tools can change the way a business operates so we work to fit with the existing business rather than change ways.</p>
+                                <h5>Power BI Dashboards</h5>
+                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br><br>&lt;button&gt;</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="space--xs bg--secondary">
+            <section class="bg--secondary space--xxs">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="feature">
-                                <h4>Relevant</h4>
-                                <p> With rich modal and notification functionality and a robust suite of options, Stack makes building feature-heavy pages simple and enjoyable. </p>
+                                <h4>Spot trends in real time and make better, more informed decisions</h4>
+                                <p>Access real-time information to identify trends early. Predictive intelligence can help you take proactive action to course correct and stay on the right path to achieve your goals.</p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature">
-                                <h4>Time Saving</h4>
-                                <p> Drastically reduce the time it takes to move from initial concept to production-ready with Stack and Variant Page Builder. Your clients will love you for it! </p>
+                                <h4>Experience your data in new ways<br></h4>
+                                <p>Dashboards provide a 360-degree view, with the most important metrics in one place, updated in real time, and available on all devices.&nbsp;With one click, users can explore the data behind their dashboard using intuitive tools that make finding answers easy.</p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature">
-                                <h4>Low Cost</h4>
-                                <p> Drastically reduce the time it takes to move from initial concept to production-ready with Stack and Variant Page Builder. Your clients will love you for it! </p>
+                                <h4>Affordable<br></h4>
+                                <p>Power BI has extremely low subscription costs making it easy for even small businesses to use&nbsp; enterprise level tools.</p>
                             </div>
                         </div>
                     </div>
@@ -126,8 +122,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-md-12">
-                            <h2>What's in a dashboard?</h2>
-                            <p class="lead">A dashboard provides a simple real time overview of your organisation and also provides the ability to get into the detail.&nbsp;</p>
+                            <h2>What's a dashboard?</h2>
+                            <p class="lead">A dashboard provides a simple, real time overview of your organisation.&nbsp;</p>
                         </div>
                     </div>
                 </div>
@@ -163,17 +159,18 @@
                     </div>
                 </div>
             </section>
-            <section class="space--xxs bg--dark">
+            <a id="processed" class="in-page-link"></a>
+            <section class="bg--dark space--xs">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-lg-8">
-                            <h2>The Process</h2>
-                            <p class="lead"> </p>
+                            <h2>The Journey</h2>
+                            <p class="lead">In four simple steps we promise to have your business making more informed decisions.</p>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="space--xxs bg--dark">
+            <section class="bg--dark space--xs">
                 <div class="container">
                     <div class="process-2 row">
                         <div class="col-md-3">
@@ -185,19 +182,19 @@
                         <div class="col-md-3">
                             <div class="process__item">
                                 <h5>2. Context</h5>
-                                <p>&nbsp;Raw data is often not intuitive. We relabel and reorganise data to give it context and meaning which is relevant to your business.</p>
+                                <p>Raw data is not friendly. We reorganise data giving it context and meaning relevant to your business.</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="process__item">
                                 <h5>3. Interactive Reports</h5>
-                                <p>We work with you to create relevant and creative dashboards that improve your operations. Find insights and a new perspective on operations.</p>
+                                <p>We work with you to create relevant and creative dashboards that improve your operations. Find insights and a new perspective.</p>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="process__item">
                                 <h5>4. Knowledge Transfer</h5>
-                                <p>We show you how you can create custom reports in seconds on your own so you can update the dashboards as the needs of the organisation change.</p>
+                                <p>Your able to update dashboards as the needs of the organisation change.</p>
                             </div>
                         </div>
                     </div>
@@ -214,7 +211,8 @@
                                     <h3>Contact Us</h3>
                                     <p class="lead">We would love to work with you and your organisation.<br><br>Please get in touch.</p>
                                     <hr class="short">
-                                    <p>Email: <b>Team@StrongAnalytics.co.nz</b><br>Phone: <b>022 484 6692</b><br>Address:<b>&nbsp;4 Jackson Street, Petone, Wellington 5012</b></p>
+                                    <p>Email: <b>Team@Strongr.co.nz</b></p>
+                                    <p>Dunedin: <b>03 588 0190</b></p>
                                 </div>
                             </div>
                         </div>
