--- a/index.html
+++ b/index.html
@@ -85,9 +85,14 @@
                             <div class="heading-block">
                                 <h2>What We Do</h2>
                             </div>
-                            <div class="text-block">
+                            <div class="feature">
                                 <h5>Power BI Dashboards</h5>
-                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br><br>&lt;button&gt;</p>
+                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br></p>
+                                <a class="btn" href="#processed">
+    <span class="btn__text">
+        The Journey
+    </span>
+</a>
                             </div>
                         </div>
                     </div>
