--- a/index.html
+++ b/index.html
@@ -28,20 +28,12 @@
                         </div>
                     </div>
                 </div>
-                <nav id="menu1" class="bar bar-1 hidden-xs bg--dark bar--absolute bar--transparent">
+                <nav id="menu1" class="bar bar-1 hidden-xs bar--absolute bar--transparent">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-1 col-sm-2 hidden-xs">
                                 <div class="bar__module">
                                     <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/text_white_50.png"> </a>
-                                </div>
-                            </div>
-                            <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
-                                <div class="bar__module">
-                                    <ul class="menu-horizontal text-left">
-                                        <li> <a href="#contact" class="inner-link" target="_self">
-                                        Contact</a> </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -85,14 +77,10 @@
                             <div class="heading-block">
                                 <h2>What We Do</h2>
                             </div>
-                            <div class="feature">
+                            <div class="text-block">
                                 <h5>Power BI Dashboards</h5>
-                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br></p>
-                                <a class="btn" href="#processed">
-    <span class="btn__text">
-        The Journey
-    </span>
-</a>
+                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br><br>&lt;button&gt;</p>
+                                <a class="btn" href="#process"> <span class="btn__text"> The Journey </span> </a>
                             </div>
                         </div>
                     </div>
@@ -164,13 +152,13 @@
                     </div>
                 </div>
             </section>
-            <a id="processed" class="in-page-link"></a>
+            <a id="process" class="in-page-link"></a>
             <section class="bg--dark space--xs">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-lg-8">
                             <h2>The Journey</h2>
-                            <p class="lead">In four simple steps we promise to have your business making more informed decisions.</p>
+                            <p class="lead">In four simple steps we promise to have you making more informed decisions.</p>
                         </div>
                     </div>
                 </div>
@@ -216,8 +204,8 @@
                                     <h3>Contact Us</h3>
                                     <p class="lead">We would love to work with you and your organisation.<br><br>Please get in touch.</p>
                                     <hr class="short">
-                                    <p>Email: <b>Team@Strongr.co.nz</b></p>
-                                    <p>Dunedin: <b>03 588 0190</b></p>
+                                    <p>Email: <b>Team@Strongr.co.nz<br></b></p>
+                                    <p>Phone<b>: 022 484 6692</b></p>
                                 </div>
                             </div>
                         </div>
