--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-6 col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="img/dash2.png"> </div>
                         <div class="col-lg-5 col-md-6">
-                            <div class="heading-block">
+                            <div class="heading-block" style="margin:0px; padding:0px;">
                                 <h2>What We Do</h2>
                             </div>
                             <div class="text-block">
