--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </div>
                             <div class="text-block">
                                 <h5>Power BI Dashboards</h5>
-                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br></p>
+                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.</p>
                                 <a class="btn" href="#process"> <span class="btn__text"> The Journey </span> </a>
                             </div>
                         </div>
@@ -163,7 +163,8 @@
                             <p class="lead">Starting from <b>$299</b></p>
                         </div>
                         <div class="col-md-3 text-right text-center-xs">
-                            <a class="btn btn--primary type--uppercase inner-link" href="#contact" target="_self"> <span class="btn__text">
+                            <a class="
+                                      btn--primary type--uppercase inner-link" href="#contact" target="_self"> <span class="btn__text">
                         Contact Us</span> </a>
                         </div>
                     </div>
