--- a/index.html
+++ b/index.html
@@ -163,9 +163,7 @@
                             <p class="lead">Starting from <b>$299</b></p>
                         </div>
                         <div class="col-md-3 text-right text-center-xs">
-                            <a class="
-                                      btn--primary type--uppercase inner-link" href="#contact" target="_self"> <span class="btn__text">
-                        Contact Us</span> </a>
+                            <a class="btn--primary type--uppercase inner-link" href="#contact" target="_self"> <span class="btn__text">Contact Us</span> </a>
                         </div>
                     </div>
                 </div>
