--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                             </div>
                             <div class="text-block">
                                 <h5>Power BI Dashboards</h5>
-                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.</p>
-                                <a class="btn" href="#process"> <span class="btn__text"> The Journey </span> </a>
+                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br></p>
+                            <a class="btn" href="#process"> <span class="btn__text"> The Journey</span> </a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,8 @@
                             <p class="lead">Starting from <b>$299</b></p>
                         </div>
                         <div class="col-md-3 text-right text-center-xs">
-                            <a class="btn--primary type--uppercase inner-link" href="#contact" target="_self"> <span class="btn__text">Contact Us</span> </a>
+                            <a class="btn btn--primary type--uppercase inner-link" href="#contact" target="_self"> <span class="btn__text">
+                        Contact Us</span> </a>
                         </div>
                     </div>
                 </div>
@@ -209,7 +210,7 @@
                     </div>
                 </div>
             </section>
-            <a id="contact" class="in-page-link"></a>
+            <a id="" class="in-page-link" data-scroll-id="contact"></a>
             <section class="imagebg feature-large-7 switchable switchable--switch text-center">
                 <div class="background-image-holder"> <img alt="background" src="img/nz.jpg"> </div>
                 <div class="container">
@@ -221,6 +222,7 @@
                                     <p class="lead">We would love to work with you and your organisation.<br><br>Please get in touch.</p>
                                     <hr class="short">
                                     <p>Email: <b>Team@Strongr.co.nz</b><br></p>
+                                    <img src="img/text_black_60.png"/>
                                 </div>
                             </div>
                         </div>
