--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                     <p class="lead">We would love to work with you and your organisation.<br><br>Please get in touch.</p>
                                     <hr class="short">
                                     <p>Email: <b>Team@Strongr.co.nz</b><br></p>
-                                    <img src="img/text_black_50.png"/>
+                                    <img style="max-height:30px;" src="img/text_black_50.png"/>
                                 </div>
                             </div>
                         </div>
