--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </div>
                 </div>
             </section>
-            <a id="" class="in-page-link" data-scroll-id="contact"></a>
+            <a id="contact" class="in-page-link" data-scroll-id="contact"></a>
             <section class="imagebg feature-large-7 switchable switchable--switch text-center">
                 <div class="background-image-holder"> <img alt="background" src="img/nz.jpg"> </div>
                 <div class="container">
