--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                             <div class="col-xs-3 col-sm-2">
                                 <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
                             </div>
-                            <div class="col-xs-9 col-sm-10 text-right">
-                                <a href="#header-element" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -221,7 +219,7 @@
                                     <h3>Contact Us</h3>
                                     <p class="lead">We would love to work with you and your organisation.<br><br>Please get in touch.</p>
                                     
-                                    <p>Email: <b>Team@Strongr.co.nz</b><br></p>
+                                    <p>Email: <b><a href="mailto:Team@Strongr.co.nz">Team@Strongr.co.nz</a></b><br></p>
                                     <img style="max-height:20px;" src="img/text_black_50.png"/>
                                 </div>
                             </div>
