--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Strongr - Smart Business Dashboards </title>
-        <meta name="description" content="High quality data visualisation dashboards that enable you to spot opportunities without the guesswork. Powerful yet user-friendly, our dashboards are game changers in organisational decision making." />
+        <meta name="description" content="High-quality data visualisation dashboards that enable you to spot opportunities without the guesswork. Powerful yet user-friendly, our dashboards are game changers in organisational decision making." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
@@ -78,7 +78,7 @@
                             </div>
                             <div class="text-block">
                                 <h5>Power BI Dashboards</h5>
-                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud based model. What ever your business does, we can help make more informed decisions.<br></p>
+                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud-based model. What ever your business does, we can help make more informed decisions.<br></p>
                             <a class="btn" href="#process"> <span class="btn__text"> The Journey</span> </a>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="feature">
-                                <h4>Spot trends in real time and make better, more informed decisions</h4>
+                                <h4>Spot trends in real-time and make better, more informed decisions</h4>
                                 <p>Access real-time information to identify trends early. Predictive intelligence can help you take proactive action to course correct and stay on the right path to achieve your goals.</p>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                     <div class="row">
                         <div class="col-md-10 col-lg-8">
                             <h2>The Journey</h2>
-                            <p class="lead">In four simple steps we promise to have you making more informed decisions.</p>
+                            <p class="lead">In four simple steps, we promise to have you making more informed decisions.</p>
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                         <div class="col-md-3">
                             <div class="process__item">
                                 <h5>1. Transformation</h5>
-                                <p>Data is combined from multiple sources into a useable data model which auto-updates as new information becomes available.</p>
+                                <p>Data is combined from multiple sources into a usable data model which auto-updates as new information becomes available.</p>
                             </div>
                         </div>
                         <div class="col-md-3">
