--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Strongr - Smart Business Dashboards </title>
-        <meta name="description" content="High-quality data visualisation dashboards that enable you to spot opportunities without the guesswork. Powerful yet user-friendly, our dashboards are game changers in organisational decision making." />
+        <meta name="description" content="High quality data visualisation dashboards that enable you to spot opportunities without the guesswork. Powerful yet user-friendly, our dashboards are game changers in organisational decision making." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/iconsmind.css" rel="stylesheet" type="text/css" media="all" />
@@ -78,7 +78,7 @@
                             </div>
                             <div class="text-block">
                                 <h5>Power BI Dashboards</h5>
-                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud-based model. What ever your business does, we can help make more informed decisions.<br></p>
+                                <p><b>Strongr</b> sets up <b>Microsoft Power BI </b>specifically for your business. We make sure dashboards reflect individual business goals and constraints.&nbsp;We combine data from all areas of your business into an auto-updating, cloud-based model. Whatever your business does, we can help make more informed decisions.<br></p>
                             <a class="btn" href="#process"> <span class="btn__text"> The Journey</span> </a>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="text-block"> <i class="icon color--dark icon-Clouds icon--lg"></i>
                                 <h4>Accurate</h4>
-                                <p>The most up-to-date data pulled rights from the source.</p>
+                                <p>The most up-to-date data pulled right from the source.</p>
                             </div>
                         </div>
                     </div>
