--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link href="css/theme-aqua.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,400i,500,600,700" rel="stylesheet">
-
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     </head>
     <body data-smooth-scroll-offset="77">
         <div class="nav-container">
