--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <div class="boxed boxed--lg border--round bg--white row justify-content-center">
                                 <div class="col-lg-10 col-md-12">
                                     <h3>Contact Us</h3>
-                                    <p class="lead">For all business enquiries or for more information, email <a href="mailto:team@strongr.co.nz">Team@Strongr.co.nz</a>.</p>
+                                    <p class="lead">For all business enquiries or for more information, please email <a href="mailto:team@strongr.co.nz">Team@Strongr.co.nz</a></p>
                                     <img style="max-height:20px;" src="img/text_black_50.png"/>
                                   
                                 </div>
