--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="row">
                         <div class="col-md-8 col-lg-7">
                             <h1>Discover what's missing.<br></h1>
-                            <p class="lead">High quality data visualisation dashboards that enable you to spot opportunities without the guesswork.&nbsp;<br></p>
+                            <p class="lead">Data visualisation dashboards that enable you to spot opportunities without the guesswork.&nbsp;<br></p>
                         </div>
                     </div>
                 </div>
