--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
         <link rel=”image_src” href=”img/dash2.png” />
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117087790-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117087790-1');
+</script>
     </head>
     <body data-smooth-scroll-offset="77">
         <div class="nav-container">
